Added devel, config_split, config_filter modules

--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,11 @@
     ],
     "require": {
         "composer/installers": "^1.2",
+        "drupal/config_split": "^1.7",
         "drupal/core-composer-scaffold": "^8.8",
         "drupal/core-project-message": "^8.8",
         "drupal/core-recommended": "^8.8",
+        "drupal/devel": "2.1",
         "drush/drush": "^10.3"
     },
     "conflict": {
