--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -7,6 +7,8 @@ module:
   ckeditor: 0
   color: 0
   config: 0
+  config_filter: 0
+  config_split: 0
   config_translation: 0
   contact: 0
   content_moderation: 0
@@ -14,6 +16,7 @@ module:
   datetime: 0
   dblog: 0
   demo_umami_content: 0
+  devel: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
