Added dev block and added it to complete split

--- a/config/sync/config_split.config_split.development.yml
+++ b/config/sync/config_split.config_split.development.yml
@@ -9,7 +9,8 @@ folder: ../config/split/development
 module:
   devel: 0
 theme: {  }
-blacklist: {  }
+blacklist:
+  - block.block.developmentblock
 graylist: {  }
 graylist_dependents: true
 graylist_skip_equal: true
