--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal/core-project-message": "^8.8",
         "drupal/core-recommended": "^8.8",
         "drupal/devel": "2.1",
+        "drupal/environment_indicator": "^4.0",
         "drush/drush": "^10.3"
     },
     "conflict": {
